added authorisations flow and updated spec documents
